--- a/GetTranscriptRequests/GetTranscriptRequests/package.json
+++ b/GetTranscriptRequests/GetTranscriptRequests/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "app-config": "^0.1.4",
+    "ddp": "^0.11.0",
+    "meteor-job": "^1.3.1",
     "request": "^2.61.0"
   }
 }
