--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "GetTranscriptRequests",
+  "name": "NodeServices",
   "version": "0.0.0",
-  "description": "GetTranscriptRequests",
+  "description": "NodeServices",
   "main": "app.js",
   "author": {
     "name": "mwestbrooke",
@@ -10,6 +10,7 @@
   "dependencies": {
     "app-config": "^0.1.4",
     "ddp": "^0.11.0",
+    "ddp-login": "^1.0.9",
     "meteor-job": "^1.3.1",
     "request": "^2.61.0"
   }
