--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "app-config": "^0.1.4",
+    "dateformat": "^1.0.11",
     "ddp": "^0.11.0",
     "ddp-login": "^1.0.9",
     "meteor-job": "^1.3.1",
-    "request": "^2.65.0"
+    "request": "^2.65.0",
+    "xml2js": "^0.4.15"
   }
 }
