--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dateformat": "^1.0.11",
     "ddp": "^0.11.0",
     "ddp-login": "^1.0.9",
+    "fibers": "^1.0.7",
     "meteor-job": "^1.3.1",
     "request": "^2.65.0",
     "xml2js": "^0.4.15"
