--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "ddp": "^0.11.0",
     "ddp-login": "^1.0.9",
     "fibers": "^1.0.7",
+    "later": "^1.2.0",
     "meteor-job": "^1.3.1",
     "request": "^2.65.0",
+    "underscore": "^1.8.3",
     "xml2js": "^0.4.15"
   }
 }
