--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "fibers": "^1.0.7",
     "later": "^1.2.0",
     "meteor-job": "^1.3.1",
+    "oracledb": "^1.4.0",
     "request": "^2.65.0",
     "underscore": "^1.8.3",
     "xml2js": "^0.4.15"
