--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "app-config": "^0.1.4",
     "dateformat": "^1.0.11",
-    "ddp": "^0.11.0",
+    "ddp": "https://github.com/EduShareOntario/node-ddp-client/archive/master.tar.gz",
     "ddp-login": "^1.0.9",
     "fibers": "^1.0.7",
     "meteor-job": "^1.3.1",
