--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "NodeServices",
+  "name": "jobCollectionWorkers",
   "version": "0.0.0",
-  "description": "NodeServices",
-  "main": "app.js",
+  "description": "Job collection workers, process and/or create jobs",
+  "main": "",
   "author": {
     "name": "mwestbrooke",
     "email": ""
@@ -11,7 +11,6 @@
     "app-config": "^0.1.4",
     "dateformat": "^1.0.11",
     "ddp": "https://github.com/EduShareOntario/node-ddp-client/archive/master.tar.gz",
-    "ddp-login": "^1.0.9",
     "fibers": "^1.0.7",
     "later": "^1.2.0",
     "meteor-job": "^1.3.1",
