--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "meteor-job": "^1.3.1",
     "oracledb": "^1.4.0",
     "request": "^2.65.0",
+    "soap": "^0.11.1",
     "underscore": "^1.8.3",
     "xml2js": "^0.4.15"
   }
