--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "later": "^1.2.0",
     "meteor-job": "^1.3.1",
     "oracledb": "^1.4.0",
+    "orawrap": "^0.2.4",
     "request": "^2.65.0",
     "soap": "^0.11.1",
     "underscore": "^1.8.3",
