--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "request": "^2.65.0",
     "soap": "^0.11.1",
     "underscore": "^1.8.3",
-    "xml2js": "^0.4.15"
+    "xml2js": "^0.4.15",
+    "xmlbuilder": "^4.2.1"
   }
 }
