--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "jobCollectionWorkers",
-  "version": "0.0.0",
+  "name": "job-collection-workers",
+  "version": "1.0.0",
   "description": "Job collection workers, process and/or create jobs",
   "main": "",
   "author": {
@@ -9,11 +9,11 @@
   },
   "dependencies": {
     "app-config": "^0.1.4",
-    "dateformat": "^1.0.11",
+    "dateformat": "1.0.11",
     "ddp": "https://github.com/EduShareOntario/node-ddp-client/archive/master.tar.gz",
     "fibers": "^1.0.7",
     "later": "^1.2.0",
-    "meteor-job": "^1.3.1",
+    "meteor-job": "1.3.2",
     "oracledb": "^1.4.0",
     "orawrap": "^0.2.4",
     "request": "^2.65.0",
